--- a/.github/workflows/code_review.yml
+++ b/.github/workflows/code_review.yml
@@ -1,16 +1,16 @@
-name: AI-Powered Code Review
+name: Automated Code Review
 
 on:
   pull_request:
-    types: [opened, synchronize, reopened] # Triggers on PR creation or new commits
+    types: [opened, reopened, synchronize]
 
 jobs:
-  code_review:
+  ai_review:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
+        # Fetch the base branch too, needed for accurate diffing
         with:
           fetch-depth: 0
 
@@ -25,6 +25,9 @@ jobs:
       - name: Run AI Code Review
         run: node review.js
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PR_NUMBER: ${{ github.event.pull_request.number }}
-          SRC_ROOT: src
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          # Use http://host.docker.internal:11434 if running Ollama in Docker
+          # or a specific IP if running on a separate machine/service.
+          OLLAMA_API_URL: ${{ vars.OLLAMA_API_URL || 'http://localhost:11434' }}
+          OLLAMA_MODEL: ${{ vars.OLLAMA_MODEL || 'codellama:7b' }}
