--- a/.github/workflows/code_review.yml
+++ b/.github/workflows/code_review.yml
@@ -16,7 +16,7 @@ jobs:
         ports:
           - 11434:11434
         # Așteptăm ca Ollama să pornească
-        options: >
+        options: >-
           --health-cmd "ollama --version" 
           --health-interval 10s 
           --health-timeout 5s 
